--- a/web/main.html
+++ b/web/main.html
@@ -10,7 +10,7 @@ if (!WebAssembly.instantiateStreaming) {
 }
 
 const go = new Go();
-WebAssembly.instantiateStreaming(fetch("game.wasm"), go.importObject).then(result => {
+WebAssembly.instantiateStreaming(fetch("pongo.wasm"), go.importObject).then(result => {
     go.run(result.instance);
 });
 </script>
