Add mobile iframe css

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
                         loadingScreen.style.display = 'none';
                         iframe.style.display = 'block';
 
-                        iframe.focus()
+                        iframe.getElementById('gameFrame').focus();
                     }, 500);
                 }
             }
